# looking_glass

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  LICENSE-APACHE2  LICENSE-MPL-RabbitMQ  MODULE.bazel  Makefile  README.asciidoc  WORKSPACE.bazel  erlang.mk  extensions.bzl  rebar.config  util.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: main.yml  publish-rabbitmq-bcr.yml  release.yml  test.yml  update-otp-patch-version.yaml  update-otp-patches.yaml
c_src/: lg_tracer.c  nif_helpers.c  nif_helpers.h
doc/src/guide/: book.asciidoc  callgrind.asciidoc  flame.asciidoc  introduction.asciidoc  messages.asciidoc  tracing.asciidoc
ebin/: looking_glass.app
src/: lg.erl  lg_callgrind.erl  lg_file_reader.erl  lg_file_tracer.erl  lg_flame.erl  lg_messages.erl  lg_messages_seqdiag.erl  lg_rabbit_hole.erl  lg_raw_console_tracer.erl  lg_socket_client.erl  lg_socket_tracer.erl  lg_term.erl  lg_tracer.erl  lg_tracer_pool.erl  looking_glass_app.erl  looking_glass_sup.erl
test/: lg_SUITE.erl
