module(
    name = "com_github_rabbitmq_looking_glass",
    version = "0.2.1",
)

bazel_dep(
    name = "platforms",
    version = "0.0.6",
)

external_deps = use_extension(
    ":extensions.bzl",
    "external_deps",
)

use_repo(
    external_deps,
    "nif_helpers",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.10.5",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config.internal_erlang_from_github_release(
    name = "24",
    sha256 = "d951d2fdcc4f5c8c3d5677c0644782283c8f2183d4fb53868deff2d09256121a",
    version = "24.3.4.15",
)

erlang_config.internal_erlang_from_github_release(
    name = "25",
    sha256 = "b305190e01e84eddb26d0140637f26adf674c87351c679f3bbefc8685d22cc05",
    version = "25.3.2.9",
)

erlang_config.internal_erlang_from_github_release(
    name = "26",
    sha256 = "47853ea9230643a0a31004433f07a71c1b92d6e0094534f629e3b75dbc62f193",
    version = "26.0.2",
)

use_repo(
    erlang_config,
    "erlang_config",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_dev_package.git_package(
    testonly = True,
    branch = "master",
    repository = "extend/ct_helper",
)

use_repo(
    erlang_dev_package,
    "ct_helper",
)

bazel_dep(
    name = "lz4-erlang",
    version = "1.9.2.5",
)
