module(
    name = "com_github_rabbitmq_looking_glass",
    version = "0.2.1",
)

bazel_dep(
    name = "platforms",
    version = "0.0.6",
)

external_deps = use_extension(
    ":extensions.bzl",
    "external_deps",
)

use_repo(
    external_deps,
    "nif_helpers",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.10.5",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config.internal_erlang_from_github_release(
    name = "24",
    sha256 = "2f0661b1f98b01c26e2bde7234ef587f77e5ee0e384f3b1221496782bf9c8b28",
    version = "24.3.4.17",
)

erlang_config.internal_erlang_from_github_release(
    name = "25",
    sha256 = "0a7338415c8eb6ae25664bfd1a10631c293838ef072665223a524831b823a8b7",
    version = "25.3.2.10",
)

erlang_config.internal_erlang_from_github_release(
    name = "26",
    sha256 = "47853ea9230643a0a31004433f07a71c1b92d6e0094534f629e3b75dbc62f193",
    version = "26.0.2",
)

use_repo(
    erlang_config,
    "erlang_config",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_dev_package.git_package(
    testonly = True,
    branch = "master",
    repository = "extend/ct_helper",
)

use_repo(
    erlang_dev_package,
    "ct_helper",
)

bazel_dep(
    name = "lz4-erlang",
    version = "1.9.2.5",
)
